--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install topiary
+        run: cargo install topiary-cli
+
       - name: Run tests
         run: ./test.sh
