--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cache
+        uses: actions/cache@v4.2.0
+        with:
+          # A list of files, directories, and
+          # wildcard patterns to cache and restore
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+          # An explicit key for restoring and saving the cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          # An ordered multiline string listing the prefix-matched keys,
+          # that are used for restoring stale cache if no cache hit occurred
+          # for key.
+          # Note `cache-hit` returns false in this case.
+          restore-keys: ${{ runner.os }}-cargo-
+
       - name: Install topiary
         run: cargo install topiary-cli
 
